# out_changed_3D_holo_demo

./: AI-CGH_System_Flowcharts.md  README.md  USAGE_GUIDE.md  convert_p1_to_bmp.py  convert_save_png_to_bmp.py  demo_ablation.py  draw_train_loss.py  gui_app.py  inspect_model.py  mermaid_graph.md  model-detail.md  pyproject.toml  test.py  test_ablation.py  论文设计_cur.tex
ablation_results_run1/: ablation_detailed.csv  ablation_summary.csv
demo_ablation_results/: ablation_summary.csv
mit-4k/: depth_estimator.py  generate_sphere_sample.py
src/: ablation_study.py  alft.py  dataLoader.py  inference_dataset.py  rtholo.py  train.py  utils.py
src/checkpoints/CNN_test/: 1.pth  10.pth  11.pth  12.pth  13.pth  14.pth  15.pth  16.pth  17.pth  18.pth  19.pth  2.pth  20.pth  21.pth  22.pth  23.pth  24.pth  25.pth  26.pth  27.pth  28.pth  29.pth  3.pth  30.pth  300.pth  31.pth  32.pth  33.pth  34.pth  35.pth  36.pth  37.pth  38.pth  39.pth  4.pth  40.pth  41.pth  42.pth  43.pth  44.pth  (+51 more)
src/intelligent_holography/: __init__.py  _misc.py
src/runs/CNN_test/: events.out.tfevents.1755608234.TianLang  events.out.tfevents.1755609461.TianLang  events.out.tfevents.1755610806.TianLang  events.out.tfevents.1755610843.TianLang  events.out.tfevents.1755610901.TianLang  events.out.tfevents.1755610944.TianLang  events.out.tfevents.1755610964.TianLang  events.out.tfevents.1755611177.TianLang  events.out.tfevents.1755611551.TianLang  events.out.tfevents.1755611565.TianLang  events.out.tfevents.1755611592.TianLang  events.out.tfevents.1755611639.TianLang  (+11 more)
trt/: trt_create_v1.py
